--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -321,7 +321,7 @@ $fourthColor: #909090; //light grey
 		margin: 0 0 0.5em;
 	}
 	.btn-440w {
-		margin-right: 0;
+		margin-right: 0px;
 		margin-top: 1em;
 	}
 	label {
