--- a/views/loggedinlayout.jade
+++ b/views/loggedinlayout.jade
@@ -6,6 +6,7 @@ html(ng-app="clientportal")
 		link(rel='stylesheet', href='/stylesheets/bootstrap-clockpicker.css')
 		link(rel='stylesheet', href='/stylesheets/bootstrap-datepicker.css')
 		link(rel='stylesheet', href='/stylesheets/default.css')
+		link(rel='stylesheet', href='/stylesheets/webfonts/flaticon.css')
 	body(ng-controller="main").swag
 		nav
 			ul.myNav
