--- a/public/scss/_style.scss
+++ b/public/scss/_style.scss
@@ -121,6 +121,9 @@ font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 	color: white;
 	background-color: #35A3C5;
 	margin-right: 2.2em;
+	&.nm {
+		margin-right: 0em !important;
+	}
 	&:hover {
 		color: white;
 		background-color: #A1B4BA;
