--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -78,33 +78,30 @@
   .displayContainer .information {
     text-align: center;
     margin-top: -20px; }
-  .displayContainer .displayIcon {
-    margin: -60px auto 15px;
-    padding: 10px;
-    display: block;
-    width: 75px;
-    height: 75px;
-<<<<<<< HEAD
-    border-radius: 50%;
-=======
-    border-radius: 100%;
-    border: solid 10px #fc3131;
->>>>>>> 5e0fa9ef615804fc132f276f8221b5558e7dd345
-    background-color: white; }
-    .displayContainer .displayIcon.user-profile {
-      border: solid 10px #001a74; }
-    .displayContainer .displayIcon.test-results {
-      border: solid 10px #eefe3a; }
-    .displayContainer .displayIcon.allergies {
-      border: solid 10px #00B7FF; }
-    .displayContainer .displayIcon.medicines {
-      border: solid 10px #fc3131; }
-    .displayContainer .displayIcon.appointments {
-      border: solid 10px #f79707; }
-    .displayContainer .displayIcon.reports {
-      border: solid 10px #27b534; }
-    .displayContainer .displayIcon img {
-      border: solid 10px #fc3131; }
+  .displayContainer span {
+    font-size: 45px; }
+    .displayContainer span.displayIcon {
+      margin: -60px auto 15px;
+      padding: 0px 0px 0px 4.5px;
+      display: block;
+      width: 75px;
+      height: 75px;
+      border-radius: 50%;
+      background-color: white; }
+      .displayContainer span.displayIcon.user-profile {
+        border: solid 10px #001a74; }
+      .displayContainer span.displayIcon.test-results {
+        border: solid 10px #eefe3a; }
+      .displayContainer span.displayIcon.allergies {
+        border: solid 10px #00B7FF; }
+      .displayContainer span.displayIcon.medicines {
+        border: solid 10px #fc3131; }
+      .displayContainer span.displayIcon.appointments {
+        border: solid 10px #f79707; }
+      .displayContainer span.displayIcon.reports {
+        border: solid 10px #27b534; }
+      .displayContainer span.displayIcon img {
+        border: solid 10px #fc3131; }
   .displayContainer .name {
     font-size: 25px; }
     .displayContainer .name.user-profile::after {
@@ -113,8 +110,7 @@
       display: block;
       height: 3px;
       width: 25%;
-<<<<<<< HEAD
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.test-results::after {
       border-bottom: 3px solid #eefe3a;
@@ -122,7 +118,7 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.allergies::after {
       border-bottom: 3px solid #00B7FF;
@@ -130,7 +126,7 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.medicines::after {
       border-bottom: 3px solid #fc3131;
@@ -138,7 +134,7 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.appointments::after {
       border-bottom: 3px solid #f79707;
@@ -146,7 +142,7 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.reports::after {
       border-bottom: 3px solid #27b534;
@@ -154,13 +150,8 @@
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
-      margin: auto; }
-=======
       padding-top: 5px;
-      margin: auto;
-      border-bottom: 3px solid #fc3131; }
->>>>>>> 5e0fa9ef615804fc132f276f8221b5558e7dd345
+      margin: auto; }
   .displayContainer .displayDescription {
     color: #909090; }
     .displayContainer .displayDescription h1 {
@@ -170,12 +161,11 @@
       font-size: 23px; }
     .displayContainer .displayDescription h2 {
       font-size: 20px;
-      margin: 0px;
-      margin-top: 10px;
+      margin: 10px 0 0;
       font-weight: 400; }
     .displayContainer .displayDescription h2:last-of-type {
       font-size: 18px;
-      padding: 0px 10px; }
+      padding: 0 10px; }
 
 body {
   font-family: 'Roboto Condensed', Arial, sans-serif;
@@ -252,6 +242,8 @@ body {
   color: white;
   background-color: #35A3C5;
   margin-right: 2.2em; }
+  .btn-440w.nm {
+    margin-right: 0em !important; }
   .btn-440w:hover {
     color: white;
     background-color: #A1B4BA; }
@@ -509,7 +501,7 @@ body {
   .contactUS h4 {
     margin: 0 0 0.5em; }
   .contactUS .btn-440w {
-    margin-right: 0;
+    margin-right: 0px;
     margin-top: 1em; }
   .contactUS label {
     color: #35A3C5; }
@@ -644,33 +636,30 @@ body {
   .displayContainer .information {
     text-align: center;
     margin-top: -20px; }
-  .displayContainer .displayIcon {
-    margin: -60px auto 15px;
-    padding: 10px;
-    display: block;
-    width: 75px;
-    height: 75px;
-<<<<<<< HEAD
-    border-radius: 50%;
-=======
-    border-radius: 100%;
-    border: solid 10px #fc3131;
->>>>>>> 5e0fa9ef615804fc132f276f8221b5558e7dd345
-    background-color: white; }
-    .displayContainer .displayIcon.user-profile {
-      border: solid 10px #001a74; }
-    .displayContainer .displayIcon.test-results {
-      border: solid 10px #eefe3a; }
-    .displayContainer .displayIcon.allergies {
-      border: solid 10px #00B7FF; }
-    .displayContainer .displayIcon.medicines {
-      border: solid 10px #fc3131; }
-    .displayContainer .displayIcon.appointments {
-      border: solid 10px #f79707; }
-    .displayContainer .displayIcon.reports {
-      border: solid 10px #27b534; }
-    .displayContainer .displayIcon img {
-      border: solid 10px #fc3131; }
+  .displayContainer span {
+    font-size: 45px; }
+    .displayContainer span.displayIcon {
+      margin: -60px auto 15px;
+      padding: 0px 0px 0px 4.5px;
+      display: block;
+      width: 75px;
+      height: 75px;
+      border-radius: 50%;
+      background-color: white; }
+      .displayContainer span.displayIcon.user-profile {
+        border: solid 10px #001a74; }
+      .displayContainer span.displayIcon.test-results {
+        border: solid 10px #eefe3a; }
+      .displayContainer span.displayIcon.allergies {
+        border: solid 10px #00B7FF; }
+      .displayContainer span.displayIcon.medicines {
+        border: solid 10px #fc3131; }
+      .displayContainer span.displayIcon.appointments {
+        border: solid 10px #f79707; }
+      .displayContainer span.displayIcon.reports {
+        border: solid 10px #27b534; }
+      .displayContainer span.displayIcon img {
+        border: solid 10px #fc3131; }
   .displayContainer .name {
     font-size: 25px; }
     .displayContainer .name.user-profile::after {
@@ -679,8 +668,7 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-<<<<<<< HEAD
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.test-results::after {
       border-bottom: 3px solid #eefe3a;
@@ -688,7 +676,7 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.allergies::after {
       border-bottom: 3px solid #00B7FF;
@@ -696,7 +684,7 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.medicines::after {
       border-bottom: 3px solid #fc3131;
@@ -704,7 +692,7 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.appointments::after {
       border-bottom: 3px solid #f79707;
@@ -712,7 +700,7 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
+      padding-top: 5px;
       margin: auto; }
     .displayContainer .name.reports::after {
       border-bottom: 3px solid #27b534;
@@ -720,13 +708,8 @@ body {
       display: block;
       height: 3px;
       width: 25%;
-      padding-top: 10px;
-      margin: auto; }
-=======
       padding-top: 5px;
-      margin: auto;
-      border-bottom: 3px solid #fc3131; }
->>>>>>> 5e0fa9ef615804fc132f276f8221b5558e7dd345
+      margin: auto; }
   .displayContainer .displayDescription {
     color: #909090; }
     .displayContainer .displayDescription h1 {
@@ -736,12 +719,11 @@ body {
       font-size: 23px; }
     .displayContainer .displayDescription h2 {
       font-size: 20px;
-      margin: 0px;
-      margin-top: 10px;
+      margin: 10px 0 0;
       font-weight: 400; }
     .displayContainer .displayDescription h2:last-of-type {
       font-size: 18px;
-      padding: 0px 10px; }
+      padding: 0 10px; }
 
 /*text styles*/
 h1,
