--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -31,7 +31,9 @@ block content
 								.displayCard
 									.displayContainer
 										.displayTop.medicines
-										.displayIcon.medicines
+										.displayIcon.medicnes
+											p
+												span.flaticon-medical-3
 										.information
 											.name.medicines firstname
 											.displayDescription
@@ -40,6 +42,7 @@ block content
 												h2 Frequency
 												h2 DateStart DateEnd
 												h2 Description about some soy shit here mayne. Lets go Sushiiiing dawg we out
+
 					#profilepage.tab-pane.fade.in
 						.col-sm-12
 							form
