new card directives/css and updates to api routes

--- a/public/scss/_cards.scss
+++ b/public/scss/_cards.scss
@@ -94,7 +94,7 @@ $green: #27b534;
 		&.appointments {
 			background: $orange;
 		}
-		&.reports {
+		&.immunizations {
 			background: $green;
 		}
 	}
@@ -135,7 +135,7 @@ $green: #27b534;
 		&.appointments {
 			border: solid 10px $orange;
 		}
-		&.reports {
+		&.immunizations {
 			border: solid 10px $green;
 		}
 		img {
