--- a/public/scss/_style.scss
+++ b/public/scss/_style.scss
@@ -38,6 +38,9 @@ font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 	}
 }
 .table {
+	thead > tr > th, tbody > tr > th, tfoot > tr > th, thead > tr > td, tbody > tr > td, tfoot > tr > td {
+		border-top: 0px;
+	}
 	thead {
 		> tr {
 			> th {
@@ -51,7 +54,7 @@ font-family: 'Roboto Condensed', Arial, sans-serif; /*"Lucida Grande"*/
 	> tbody {
 		> tr:nth-child(odd) {
 			> td {
-				background-color: rgba(53, 163, 197, 0.2);
+				background-color: rgba(249, 151, 5, 0.4);
 			}
 		}
 	}
