--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -102,7 +102,7 @@ block content
 											textarea.form-control(rows="5", type='text', ng-model="userdata.comment")
 									button(class="btn btn-440w nm pull-right") Save
 					#results.tab-pane.fade.in
-						profile-cards(route="Test Results")
+						test-result-cards
 					#appointments.tab-pane.fade
 						.col-sm-12
 							h2 Appointments
@@ -143,9 +143,10 @@ block content
 										.col-sm-12.input-group
 											label.control-label Reason For Appointment
 											textarea.form-control(rows='3', ng-model="apptReq.reasonForAppt")
-									button(class="btn btn-440w pull-right", ng-click="reqAppt($event)") Request New Appointment
+									button(class="btn btn-440w nm pull-right", ng-click="reqAppt($event)") Request New Appointment
 					#medicines.tab-pane.fade
 						medication-cards
 					#allergies.tab-pane.fade
-					#reports.tab-pane.fade
+						allergy-cards
 					#Immunizations.tab-pane.fade
+						immunization-cards
