--- a/public/scss/_index.scss
+++ b/public/scss/_index.scss
@@ -8,7 +8,9 @@ $firstColor: #00B7FF; //light blue
 
 $thirdColor: #4a4a4a; //dark grey
 $fourthColor: #909090; //light grey
-
+.nm {
+	margin: 0px !important;
+}
 .mypage {
 	padding: 0;
 }
