--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -92,7 +92,7 @@ block content
 						test-result-cards
 					#appointments.tab-pane.fade
 						.col-sm-12
-							h2 Appointments
+							h2.nm Appointments
 						.col-sm-12
 							table(class="table table-striped")
 								thead
