--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html
 		title
 		link(rel='stylesheet', href='/stylesheets/bootstrap.css')
 		link(rel='stylesheet', href='/stylesheets/default.css')
+		link(rel='stylesheet', href='/stylesheets/animate.css')
 		link(rel='stylesheet', href='/stylesheets/webfonts/flaticon.css')
 
 	body
@@ -21,8 +22,9 @@ html
 				//- 	a(href='/register') Register
 		block content
 
-		//- script(src='javascripts/jquery.js')
-		//- script(src='javascripts/bootstrap.js')
+		script(src='javascripts/jquery.js')
+		script(src='javascripts/jquery.waypoints.min.js')
+		script(src='javascripts/index.js')
 		//- script(src='javascripts/angular.js')
 		//- script(src='javascripts/ui-bootstrap.js')
 		//- script(src='javascripts/ui-bootstrap-tpls.js')
