--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,8 @@ block content
 				h2 Single place for all your medical information
 				p
 					| All of your medical information in one place.
-					| No wait. No travel. No Hassle.
+					| Access your account from any location, with any device.
+					| No wait. No travel. No hassle.
 
 			#welcomeRight.welcomeImage.animated
 				img(src="../images/showcase.png")
@@ -60,7 +61,7 @@ block content
 		h1 Still normal doctor visit
 			h4 made simpler...
 		.myWrapper
-			
+
 
 	.contactUS
 		h1 Contact Us
